# 1c_task

./: CMakeLists.txt  README.md  build.sh  clean.sh
include/: algorithm.hpp  pictures.hpp  point.hpp  test.hpp
src/: algorithm.cpp  main.cpp  pictures.cpp  point.cpp  test.cpp
